Flare v1.11 (WIP)

Engine fixes:

* Fix bug where items could be dragged from the vendor window and dropped in the opposite vendor tab.
* Fix bug that caused item max_quantity to be reset when attempting to append an item definition.



Flare v1.10 (http://flarerpg.org/index.php/2019/05/17/flare-1-10/)

Engine features:

* The configuration menu has been redesigned and is now used as the pause menu.
* The interface features from version 1.09 have been reverted due to being accessible from the pause menu.
* Added an Interface option to disable showing hidden entity markers.
* Support floating point values for loot drop chance values.
* Add 'hide_timeout' option to stat bar configuration to support auto-hiding. (Leszek Cimała)
* Added an Interface option to disable stat bar auto-hiding globally.
* Add 'no_stash' property to item definitions to prevent items from being placed in the stash.
* Add low HP notification system. (Leszek Cimała)
* Add ability to change the minimap zoom level by clicking on the minimap.

Engine fixes:

* Fixed event activation being tied to distance to the camera position. It is now correctly tied to distance from the player.
* Mouse movement and mouse aim now calculate direction relative to the player instead of relative to the screen.
* Fixed enemy AI so that enemies can now enter combat if a hero ally is in their proximity.
* Fix --data-path command line flag on Windows.
* Fixed dialog not being available if it lacked a topic.
* Fixed loot drop rate bonus having no effect when loot drop chance was too low.
* Fix bug where the wrong requirements were checked for passive powers that had been granted bonus points.
* Items that can't be stashed are now dropped on the ground upon opening the stash.
* Prevent re-binding the primary Main1 binding, which could break many interactions.
* Removed the ability to re-bind the Ctrl, Shift, Alt, and Delete keys, since they correspond to specific keyboard keys.