@@ -749,6 +749,7 @@ void GameStatePlay::checkStash() {
 		menu->closeAll();
 		menu->inv->visible = true;
 		menu->stash->visible = true;
+		menu->stash->setTab(MenuStash::STASH_PRIVATE);
 		mapr->stash = false;
 		menu->stash->validate(menu->drop_stack);
 	}
