@@ -213,11 +213,7 @@ void SaveLoad::saveGame() {
 
 	// Save stash
 	ss.str("");
-	if (pc->stats.permadeath)
-		ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/" << game_slot << "/stash_HC.txt";
-	else
-		ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/stash.txt";
-
+	ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/" << game_slot <<"/stash_HC.txt";
 	outfile.open(Filesystem::convertSlashes(&ss).c_str(), std::ios::out);
 
 	if (outfile.is_open()) {
@@ -225,8 +221,8 @@ void SaveLoad::saveGame() {
 		// comment
 		outfile << "## flare-engine stash file ##" << "\n";
 
-		outfile << "quantity=" << menu->stash->stock.getQuantities() << "\n";
-		outfile << "item=" << menu->stash->stock.getItems() << "\n";
+		outfile << "quantity=" << menu->stash->stock[MenuStash::STASH_PRIVATE].getQuantities() << "\n";
+		outfile << "item=" << menu->stash->stock[MenuStash::STASH_PRIVATE].getItems() << "\n";
 
 		outfile << std::endl;
 
@@ -235,6 +231,30 @@ void SaveLoad::saveGame() {
 		outfile.clear();
 
 		platform.FSCommit();
+	}
+
+	// shared stash. Not used by permadeath characters
+	if (!pc->stats.permadeath) {
+		ss.str("");
+		ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/stash.txt";
+		outfile.open(Filesystem::convertSlashes(&ss).c_str(), std::ios::out);
+
+		if (outfile.is_open()) {
+
+			// comment
+			outfile << "## flare-engine shared stash file ##" << "\n";
+
+			outfile << "quantity=" << menu->stash->stock[MenuStash::STASH_SHARED].getQuantities() << "\n";
+			outfile << "item=" << menu->stash->stock[MenuStash::STASH_SHARED].getItems() << "\n";
+
+			outfile << std::endl;
+
+			if (outfile.bad()) Utils::logError("SaveLoad: Unable to save shared stash. No write access or disk is full!");
+			outfile.close();
+			outfile.clear();
+
+			platform.FSCommit();
+		}
 	}
 
 	settings->prev_save_slot = game_slot-1;
@@ -422,6 +442,9 @@ void SaveLoad::loadGame() {
 	menu->chr->refreshStats();
 
 	loadPowerTree();
+
+	// disable the shared stash for permadeath characters
+	menu->stash->enableSharedTab(pc->stats.permadeath);
 }
 
 /**
@@ -477,25 +500,42 @@ void SaveLoad::loadStash() {
 	// Load stash
 	FileParser infile;
 	std::stringstream ss;
-	if (pc->stats.permadeath)
-		ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/" << game_slot << "/stash_HC.txt";
-	else
-		ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/stash.txt";
 
+	ss.str("");
+	ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/" << game_slot << "/stash_HC.txt";
 	if (infile.open(Filesystem::convertSlashes(&ss), !FileParser::MOD_FILE, FileParser::ERROR_NONE)) {
 		while (infile.next()) {
 			if (infile.key == "item") {
-				menu->stash->stock.setItems(infile.val);
+				menu->stash->stock[MenuStash::STASH_PRIVATE].setItems(infile.val);
 			}
 			else if (infile.key == "quantity") {
-				menu->stash->stock.setQuantities(infile.val);
+				menu->stash->stock[MenuStash::STASH_PRIVATE].setQuantities(infile.val);
 			}
 		}
 		infile.close();
 	}
 	else Utils::logInfo("SaveLoad: Could not open stash file '%s'. This may be because it hasn't been created yet.", ss.str().c_str());
 
-	menu->stash->stock.clean();
+	// load the shared stash for non-permadeath characters
+	if (!pc->stats.permadeath) {
+		ss.str("");
+		ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/stash.txt";
+		if (infile.open(Filesystem::convertSlashes(&ss), !FileParser::MOD_FILE, FileParser::ERROR_NONE)) {
+			while (infile.next()) {
+				if (infile.key == "item") {
+					menu->stash->stock[MenuStash::STASH_SHARED].setItems(infile.val);
+				}
+				else if (infile.key == "quantity") {
+					menu->stash->stock[MenuStash::STASH_SHARED].setQuantities(infile.val);
+				}
+			}
+			infile.close();
+		}
+		else Utils::logInfo("SaveLoad: Could not open shared stash file '%s'. This may be because it hasn't been created yet.", ss.str().c_str());
+	}
+
+	menu->stash->stock[MenuStash::STASH_PRIVATE].clean();
+	menu->stash->stock[MenuStash::STASH_SHARED].clean();
 }
 
 /**
